BUG FIX - word-wrap

--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -6,6 +6,7 @@
 
 p {
     margin: 5px 5px 10px 10px;
+    word-wrap: break-word;
 }
 
 h1 {
